...
    val playlistsViewModel: PlaylistsViewModel = hiltViewModel()
    var creating by rememberSaveable { mutableStateOf(false) }
    var creatingAuto by rememberSaveable { mutableStateOf(false) }

    if (creating) {
        TextInputDialog(
            title = "New playlist",
            placeholder = "Playlist name",
            onConfirm = {
                playlistsViewModel.createPlaylist(it)
                creating = false
            },
            onDismiss = { creating = false },
...
            TextButton(onClick = { creating = true }) {
                Icon(Icons.Filled.Add, contentDescription = null)
                Text("New playlist")
            }
            TextButton(onClick = { creatingAuto = true }) {
                Icon(Icons.Filled.AutoAwesome, contentDescription = null)
                Text("New auto playlist")
            }
        }
        FastScrollLazyColumn(Modifier.fillMaxSize()) {
            items(playlists, key = { it.id }) { playlist ->
                val item = LibraryItem.PlaylistItem(playlist)
                SwipeableLibraryItem(item, swipeLeft, swipeRight, actions) {
...
